# server-docker

ipin-project/: db.sqlite3  pyproject.toml
ipin-project/config/: settings.py  urls.py
ipin-project/pypackages/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
ipin-project/pypackages/migrations/: 0001_initial.py
ipin-project/templates/: base.html  index.html  login.html  upload_wheel.html
ipin-project/users/: admin.py  forms.py  mixins.py  models.py  urls.py  views.py
ipin-project/users/migrations/: 0001_initial.py
